// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correclty 1`] = `
<div>
  <div
    class="undefined default"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="default"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders on disabled 1`] = `
<div>
  <span
    class="MuiBadge-root undefined default css-1c32n2y-MuiBadge-root"
  >
    <div
      aria-disabled="true"
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="default"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-9sufak-MuiBadge-badge"
    >
      <div
        aria-disabled="true"
        class="MuiBox-root css-0"
        data-name="badge"
        data-status="default"
        data-testid="badge"
      />
    </span>
  </span>
</div>
`;

exports[`Avatar renders with background color 1`] = `
<div>
  <div
    class="undefined default"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-ww4vf0-MuiAvatar-root"
      data-name="avatar"
      data-stile="default"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with badged 1`] = `
<div>
  <span
    class="MuiBadge-root undefined default css-1c32n2y-MuiBadge-root"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="default"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-9sufak-MuiBadge-badge"
    >
      <div
        class="MuiBox-root css-0"
        data-name="badge"
        data-status="default"
        data-testid="badge"
      >
        Badge content
      </div>
    </span>
  </span>
</div>
`;

exports[`Avatar renders with name 1`] = `
<div>
  <div
    class="undefined default"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="default"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        EM
      </span>
    </div>
  </div>
</div>
`;

exports[`Avatar renders with stile primary 1`] = `
<div>
  <div
    class="undefined primary"
  >
    <div
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault medium css-17o22dy-MuiAvatar-root"
      data-name="avatar"
      data-stile="primary"
      data-testid="avatar"
    >
      <span
        data-name="abbreviation"
        data-testid="avatar-abbreviation"
      >
        SJ
      </span>
    </div>
  </div>
</div>
`;
